<resources>
    <string name="app_name">VIP迎宾HD</string>
    <string name="network_invalid">网络不给力，请检查网络连接！</string>

    <!-- 登录-->
    <string name="login_log">登录</string>
    <string name="hint_psd">请输入密码</string>
    <string name="hint_user">请输入用户名</string>
    <string name="hint_netid">请输入网点号</string>

    <!-- 主界面-->
    <string name="msg_list">消息列表</string>
    <string name="reg_search">信息查询</string>
    <string name="vip_reg">VIP注册</string>

    <!-- reg-->
    <string name="name">姓   名:</string>
    <string name="gender">性   别:</string>
    <string name="phone">电   话:</string>
    <string name="carNum">车   牌:</string>
    <string name="cardId">身份证号:</string>
    <string name="level">客户等级:</string>
    <string name="remark">备注信息:</string>
    <string name="signin">提 交</string>
    <string name="btn_clear">清 空</string>
    <string name="clientid">客户号</string>
    <string name="clientid_hint">请输入客户号</string>
    <string name="sure">修改</string>
    <string name="cancel">取消</string>

    <string name="radioBtn_male">男</string>
    <string name="radioBtn_female">女</string>

    <string name="radioBtn_level1">钻石</string>
    <string name="radioBtn_level2">黄金</string>
    <string name="radioBtn_level3">铂金</string>
    <string name="radioBtn_level4">白银</string>
    <string name="radioBtn_level5">普通</string>

    <string name="remark_hint">请输入备注信息</string>
    <string name="cardId_hint">请输入身份证号</string>
    <string name="phone_hint">请输入您的电话</string>
    <string name="car_hint">请输入车牌号码</string>
    <string name="name_hint">请输入姓名</string>

    <!-- list-->
    <string name="search_name_hint">请输入客户姓名</string>
    <string name="search">查询</string>

    <!-- calendar-->
    <string name="previous">Go to previous</string>
    <string name="next">Go to next</string>
    <string name="calendar">Calendar</string>
    <string name="calendar_time">选择时间</string>
</resources>
