<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/tv_mind"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/topbar_common_itt"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_tv_color"/>
    <!-- 姓名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_reg_style"
            android:gravity="center_vertical"
            android:hint="@string/name_hint"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_tv_color"/>
    <!-- 性别-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>

        <RadioGroup
            android:id="@+id/radiogroup_gender"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.66"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:weightSum="1">

            <RadioButton
                android:id="@+id/radioBtn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/radiobtn_checked_style"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/radioBtn_male"
                android:textColor="@android:color/black"
                android:textSize="@dimen/common_textSize_default12"/>

            <RadioButton
                android:id="@+id/radioBtn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:drawableLeft="@drawable/radiobtn_checked_style"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/radioBtn_female"
                android:textColor="@android:color/black"
                android:textSize="@dimen/common_textSize_default12"/>
        </RadioGroup>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_tv_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/phone"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_reg_style"
            android:gravity="center_vertical"
            android:hint="@string/phone_hint"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_tv_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/cardId"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>

        <EditText
            android:id="@+id/et_cardid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_reg_style"
            android:gravity="center_vertical"
            android:hint="@string/cardId_hint"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>
    </LinearLayout>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/bg_tv_color"/>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:background="@android:color/white">-->

        <!--<TextView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center_vertical"-->
            <!--android:paddingLeft="20dp"-->
            <!--android:text="@string/clientid"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="@dimen/common_textSize_default14"/>-->

        <!--<EditText-->
            <!--android:id="@+id/et_clientid"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@drawable/et_reg_style"-->
            <!--android:gravity="center_vertical"-->
            <!--android:hint="@string/clientid_hint"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="@dimen/common_textSize_default14"/>-->
    <!--</LinearLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_tv_color"/>
    <!-- -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/level"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>

        <RadioGroup
            android:id="@+id/radiogroup_level"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.66"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:weightSum="1">

            <RadioButton
                android:id="@+id/radioBtn_level1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/radiobtn_checked_style"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/radioBtn_level1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/common_textSize_default12"/>

            <RadioButton
                android:id="@+id/radioBtn_level2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:drawableLeft="@drawable/radiobtn_checked_style"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/radioBtn_level2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/common_textSize_default12"/>

            <RadioButton
                android:id="@+id/radioBtn_level3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:drawableLeft="@drawable/radiobtn_checked_style"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/radioBtn_level3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/common_textSize_default12"/>

            <RadioButton
                android:id="@+id/radioBtn_level4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:drawableLeft="@drawable/radiobtn_checked_style"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/radioBtn_level4"
                android:textColor="@android:color/black"
                android:textSize="@dimen/common_textSize_default12"/>

            <RadioButton
                android:id="@+id/radioBtn_level5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:drawableLeft="@drawable/radiobtn_checked_style"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/radioBtn_level5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/common_textSize_default12"/>
        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_tv_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/remark"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>

        <EditText
            android:id="@+id/et_remark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_reg_style"
            android:gravity="center_vertical"
            android:hint="@string/remark_hint"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_tv_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="@drawable/btn_signin_style"
            android:text="@string/sure"
            android:textColor="@android:color/white"
            android:textSize="@dimen/common_textSize_default16"/>
    </LinearLayout>
</LinearLayout>