<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@mipmap/lg_bg"
    tools:context="com.linzhi.LoginActivity">

    <RelativeLayout
        android:layout_width="370dp"
        android:layout_height="456dp"
        android:background="@drawable/login_layout_style"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/img"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="36dp"
            android:background="@android:color/holo_blue_bright"/>

        <Spinner
            android:id="@+id/tv_SiteID"
            android:layout_width="302dp"
            android:layout_height="47dp"
            android:layout_below="@+id/img"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/login_tv_style"
            android:drawableLeft="@mipmap/lg_netid"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_netid"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>

        <EditText
            android:id="@+id/tv_userName"
            android:layout_width="302dp"
            android:layout_height="47dp"
            android:layout_below="@+id/tv_SiteID"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_tv_style"
            android:drawableLeft="@mipmap/lg_user"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_user"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>

        <EditText
            android:id="@+id/tv_psd"
            android:layout_width="302dp"
            android:layout_height="47dp"
            android:layout_below="@+id/tv_userName"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_tv_style"
            android:drawableLeft="@mipmap/lg_psd"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_psd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_textSize_default14"/>

        <Button
            android:id="@+id/btn_login"
            style="@style/whitText.text18"
            android:layout_width="302dp"
            android:layout_height="47dp"
            android:layout_below="@+id/tv_psd"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/login_btn_style"
            android:text="@string/login_log"/>

    </RelativeLayout>
</RelativeLayout>
